# tasksai

./: Cargo.toml  README.md
examples/: main.asm  search.py  sql.py
src/: cli.rs  errors.rs  file_utils.rs  gemini_client.rs  main.rs  prompts.rs
