[package]
name = "tasksai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
walkdir = "2.5.0"
thiserror = "1.0"
dialoguer = "0.10"
indicatif = "0.17.11"
